@@ -424,7 +424,7 @@ module Subtitle = struct
     w : int;
     h : int;
     nb_colors : int;
-    planes : (data * int) array;
+    planes : data array * int array;
   }
 
   type rectangle = {
